--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,14 @@ body {
   font-family: 'Cal Sans', sans-serif;
 }
 
+h2 {
+  color: black;
+}
+
+span {
+  color: black;
+}
+
 .card-box .card {
   transition:box-shadow 0.3s, transform 0.3s;
 }
